<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E82A0"
    tools:context=".LogPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="381dp"
            android:layout_height="257dp"
            android:contentDescription="@string/todo"
            android:paddingTop="20sp"
            android:paddingBottom="40sp"
            app:srcCompat="@drawable/login_icon" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorization"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="#FF1F2C79"
            android:padding="10sp"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="25sp"
            android:hint="@string/email"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fields"
            android:padding="10sp"
            android:textColor="@color/colorText"
            android:autofillHints="idima.mor@gmail.com"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:hint="@string/password"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fields"
            android:padding="10sp"
            android:textColor="@color/colorText"
            android:autofillHints="qwerty2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/button"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/button"
                android:text="@string/sign_in" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>